<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android           ="http://schemas.android.com/apk/res/android"
    xmlns:app               ="http://schemas.android.com/apk/res-auto"
    xmlns:tools             ="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width    ="match_parent"
        android:layout_height   ="match_parent"
        tools:context           ="lyubomir.babev.countries.project.views.activities.CountryDetailsActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id                              ="@+id/appBarLayout"
            android:layout_width                    ="match_parent"
            android:layout_height                   ="wrap_content"
            android:background                      ="?attr/colorPrimary"
            app:layout_constraintTop_toTopOf        ="parent"
            app:layout_constraintStart_toStartOf    ="parent"
            app:layout_constraintEnd_toEndOf        ="parent">

            <androidx.appcompat.widget.Toolbar
                android:id                      ="@+id/toolbar"
                android:layout_width            ="match_parent"
                android:layout_height           ="?attr/actionBarSize"
                app:contentInsetLeft            ="0dp"
                app:contentInsetStart           ="0dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id              ="@+id/backBtn"
                    android:layout_width    ="?attr/actionBarSize"
                    android:layout_height   ="?attr/actionBarSize"
                    android:src             ="@drawable/ic_back_arrow"
                    android:padding         ="16dp"
                    android:background      ="?attr/actionBarItemBackground"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width    ="match_parent"
                    android:layout_height   ="match_parent"
                    android:gravity         ="center_vertical"
                    android:text            ="@string/country_details"
                    android:textSize        ="20sp"
                    android:layout_marginEnd="16dp"/>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <fragment
            android:id                              ="@+id/map"
            android:name                            ="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width                    ="0dp"
            android:layout_height                   ="0dp"
            app:layout_constraintTop_toBottomOf     ="@id/appBarLayout"
            app:layout_constraintStart_toStartOf    ="parent"
            app:layout_constraintEnd_toEndOf        ="parent"
            app:layout_constraintHeight_percent     ="0.30"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id                              ="@+id/nameLabelTxt"
            android:layout_width                    ="wrap_content"
            android:layout_height                   ="wrap_content"
            android:layout_marginStart              ="16dp"
            android:textSize                        ="16sp"
            android:text                            ="@string/country_colons"
            app:layout_constraintTop_toTopOf        ="@+id/nameTxt"
            app:layout_constraintBottom_toBottomOf  ="@+id/nameTxt"
            app:layout_constraintStart_toStartOf    ="parent"/>

        <TextView
            android:id                              ="@+id/nameTxt"
            android:layout_width                    ="0dp"
            android:layout_height                   ="wrap_content"
            android:layout_marginTop                ="16dp"
            android:layout_marginStart              ="16dp"
            android:layout_marginEnd                ="16dp"
            android:textSize                        ="15sp"
            android:gravity                         ="center_vertical|end"
            app:layout_constraintTop_toBottomOf     ="@+id/map"
            app:layout_constraintStart_toEndOf      ="@+id/nameLabelTxt"
            app:layout_constraintEnd_toEndOf        ="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id                              ="@+id/regionLabelTxt"
            android:layout_width                    ="wrap_content"
            android:layout_height                   ="wrap_content"
            android:layout_marginStart              ="16dp"
            android:textSize                        ="16sp"
            android:text                            ="@string/region_colons"
            app:layout_constraintTop_toTopOf        ="@+id/regionTxt"
            app:layout_constraintBottom_toBottomOf  ="@+id/regionTxt"
            app:layout_constraintStart_toStartOf    ="parent"/>

        <TextView
            android:id                              ="@+id/regionTxt"
            android:layout_width                    ="0dp"
            android:layout_height                   ="wrap_content"
            android:layout_marginTop                ="16dp"
            android:layout_marginStart              ="16dp"
            android:layout_marginEnd                ="16dp"
            android:textSize                        ="15sp"
            android:gravity                         ="center_vertical|end"
            app:layout_constraintTop_toBottomOf     ="@+id/nameTxt"
            app:layout_constraintStart_toEndOf      ="@+id/regionLabelTxt"
            app:layout_constraintEnd_toEndOf        ="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id                              ="@+id/populationLabelTxt"
            android:layout_width                    ="wrap_content"
            android:layout_height                   ="wrap_content"
            android:layout_marginStart              ="16dp"
            android:textSize                        ="16sp"
            android:text                            ="@string/population_colons"
            app:layout_constraintTop_toTopOf        ="@+id/populationTxt"
            app:layout_constraintBottom_toBottomOf  ="@+id/populationTxt"
            app:layout_constraintStart_toStartOf    ="parent"/>

        <TextView
            android:id                              ="@+id/populationTxt"
            android:layout_width                    ="0dp"
            android:layout_height                   ="wrap_content"
            android:layout_marginTop                ="16dp"
            android:layout_marginStart              ="16dp"
            android:layout_marginEnd                ="16dp"
            android:textSize                        ="15sp"
            android:gravity                         ="center_vertical|end"
            app:layout_constraintTop_toBottomOf     ="@+id/regionTxt"
            app:layout_constraintStart_toEndOf      ="@+id/populationLabelTxt"
            app:layout_constraintEnd_toEndOf        ="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id                              ="@+id/capitalLabelTxt"
            android:layout_width                    ="wrap_content"
            android:layout_height                   ="wrap_content"
            android:layout_marginStart              ="16dp"
            android:textSize                        ="16sp"
            android:text                            ="@string/capital_colons"
            app:layout_constraintTop_toTopOf        ="@+id/capitalTxt"
            app:layout_constraintBottom_toBottomOf  ="@+id/capitalTxt"
            app:layout_constraintStart_toStartOf    ="parent"/>

        <TextView
            android:id                              ="@+id/capitalTxt"
            android:layout_width                    ="0dp"
            android:layout_height                   ="wrap_content"
            android:layout_marginTop                ="16dp"
            android:layout_marginStart              ="16dp"
            android:layout_marginEnd                ="16dp"
            android:textSize                        ="15sp"
            android:gravity                         ="center_vertical|end"
            app:layout_constraintTop_toBottomOf     ="@+id/populationTxt"
            app:layout_constraintStart_toEndOf      ="@+id/capitalLabelTxt"
            app:layout_constraintEnd_toEndOf        ="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id                              ="@+id/flagLabelTxt"
            android:layout_width                    ="wrap_content"
            android:layout_height                   ="wrap_content"
            android:layout_marginStart              ="16dp"
            android:textSize                        ="16sp"
            android:text                            ="@string/flag_colons"
            app:layout_constraintTop_toTopOf        ="@+id/flagImg"
            app:layout_constraintBottom_toBottomOf  ="@+id/flagImg"
            app:layout_constraintStart_toStartOf    ="parent"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id                              ="@+id/flagImg"
            android:layout_width                    ="40dp"
            android:layout_height                   ="40dp"
            android:layout_marginTop                ="16dp"
            android:layout_marginStart              ="16dp"
            android:layout_marginEnd                ="16dp"
            app:layout_constraintTop_toBottomOf     ="@+id/capitalTxt"
            app:layout_constraintEnd_toEndOf        ="parent"
            tools:src                               ="@tools:sample/backgrounds/scenic"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>